2010-06-22  kitone  <kitone@gna.org>

	* src/we/waveformrenderercairo.cc:
	Fix bug #16016 : waveform segmentation fault.

2010-06-20  kitone  <kitone@gna.org>

	* plugins/actions/documentmanagement/documentmanagement.cc:
	* plugins/actions/externalvideoplayer/externalvideoplayer.cc:
	* plugins/actions/joindocument/joindocument.cc:
	* src/document.cc:
	* src/document.h:
	Code clean up.

2010-06-15  kitone  <kitone@gna.org>

	* plugins/actions/findandreplace/findandreplace.cc:
	Fix bug #16058 : crash at "find and replace" with regexp.

2010-06-13  kitone  <kitone@gna.org>

	* plugins/actions/scalesubtitles/dialog-scale-subtitles.ui:
	* plugins/actions/scalesubtitles/scalesubtitles.cc:
	Fix bug #16121 : Feature request: add option to scale all subtitles. (Orig.
	patch by Ludek <anomen>)

2010-05-26  kitone  <kitone@gna.org>

	* plugins/subtitleformats/bitc/bitc.cc:
	* plugins/subtitleformats/sprucestl/sprucestl.cc:
	* src/gui/dialogutility.cc:
	* src/gui/dialogutility.h:
	Split the framerate query with import and export labels.

2010-05-25  kitone  <kitone@gna.org>

	* src/gui/comboboxframerate.cc:
	* src/gui/comboboxframerate.h:
	* src/gui/dialogutility.cc:
	* src/gui/dialogutility.h:
	Add set_value to ComboBoxFramerate and set_default_framerate to
	FramerateChooserDialog.

	* plugins/subtitleformats/bitc/bitc.cc:
	* plugins/subtitleformats/sprucestl/sprucestl.cc:
	Sets the framerate of the document after the user have chosen and sets 
	the default value from the document during saving.

2010-05-25  kitone  <kitone@gna.org>

	* plugins/subtitleformats/sprucestl/sprucestl.cc:
	Small fix in the regex.

2010-05-25  kitone  <kitone@gna.org>

	* plugins/subtitleformats/sprucestl/sprucestl.cc:
	Ask framerate value with the FramerateChooserDialog. Small improvements.

2010-05-25  kitone  <kitone@gna.org>

	* plugins/subtitleformats/bitc/Makefile.am:
	* plugins/subtitleformats/bitc/bitc.cc:
	* plugins/subtitleformats/bitc/dialog-bitc.ui: